# 3rd-party-libs

mavsdk/: BUILD.bazel
